# media-search-ranking-reliability-framework

./: .dockerignore  .gitattributes  .gitignore  DATA_SOURCES_AND_LICENSES.md  Dockerfile  FROZEN_MOVIELENS_QUALITY_UPGRADE.md  LOCAL_WINDOWS_RUN.md  Makefile  QUALITY_UPGRADE_RUN.md  README.md  SECURITY.md  aggregate_frozen_quality_results.ps1  apply_public_portfolio_polish.ps1  finalize_repository.ps1  pyproject.toml  requirements.txt  run_media_search_all_improvements.ps1  run_media_search_end_to_end.ps1  run_movieLens_frozen_quality_ablation.ps1  verify_clean_checkout.ps1
artifacts/: README.md  ablation_metrics.csv  dataset_smoke_summary.json  environment_report.json  eval_summary.json  latency_by_variant.csv  latency_summary.json  launch_gate.json  monte_carlo_checks.csv  monte_carlo_scenario_summary.csv  monte_carlo_summary.json  retrieval_metrics.csv  slice_metrics.csv
configs/: monte_carlo.yaml  pipeline_external_gpu_full.yaml  pipeline_external_gpu_quick.yaml
constraints/: py311.txt
dashboards/: streamlit_app.py
data/: README.md
docs/: ARCHITECTURE.md  CLAIM_BOUNDARIES.md  DEMO_WALKTHROUGH.md  FINAL_RESULTS.md  PUBLIC_RELEASE_CHECKLIST.md  REPOSITORY_MAP.md  REPRODUCIBILITY.md
reports/: 01_data_validation_report.md  02_retrieval_baseline_report.md  03_lambdarank_training_report.md  04_ablation_report.md  05_quality_latency_frontier.md  06_slice_reliability_report.md  07_launch_readiness_memo.md  10_query_label_quality_report.md  11_strengthening_loop_report.md  12_environment_and_runnability_report.md  13_local_github_runnability_audit.md  (+14 more)
(+156 files in other folders)
