[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-search-reliability"
version = "0.8.0"
description = "End-to-end trainable public-data media search, ranking, and reliability framework."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "lightgbm>=4.0",
  "joblib>=1.3",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.0",
]


[project.optional-dependencies]
gpu = ["sentence-transformers>=3.0"]
faiss = ["faiss-cpu>=1.8; platform_system != 'Windows'"]
dashboard = ["streamlit>=1.35"]
dev = ["pytest>=8.0", "httpx>=0.27", "tabulate>=0.9", "build>=1.2"]

[project.scripts]
media-search-api = "media_search_reliability.api.cli:main"
media-search-run = "media_search_reliability.cli:pipeline_main"
media-search-download = "media_search_reliability.cli:download_main"
media-search-dataset-smoke = "media_search_reliability.evaluation.dataset_smoke:main"
media-search-check-path = "media_search_reliability.cli:check_path_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.package-data]
media_search_reliability = ["configs/*.yaml"]
